# generated/model_node.go
@@ -1,0 +1,259 @@
+/*
+Sapliy Fintech API
+
+Official API for the Sapliy Fintech Ecosystem. Build robust financial applications with our type-safe, high-integrity platform.
+
+API version: 1.0.0
+Contact: support@sapliy.io
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package generated
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the Node type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &Node{}
+
+// Node struct for Node
+type Node struct {
+	Id string `json:"id"`
+	Type string `json:"type"`
+	Position map[string]interface{} `json:"position,omitempty"`
+	Data map[string]interface{} `json:"data,omitempty"`
+}
+
+type _Node Node
+
+// NewNode instantiates a new Node object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewNode(id string, type_ string) *Node {
+	this := Node{}
+	this.Id = id
+	this.Type = type_
+	return &this
+}
+
+// NewNodeWithDefaults instantiates a new Node object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewNodeWithDefaults() *Node {
+	this := Node{}
+	return &this
+}
+
+// GetId returns the Id field value
+func (o *Node) GetId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value
+// and a boolean to check if the value has been set.
+func (o *Node) GetIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Id, true
+}
+
+// SetId sets field value
+func (o *Node) SetId(v string) {
+	o.Id = v
+}
+
+// GetType returns the Type field value
+func (o *Node) GetType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Type
+}
+
+// GetTypeOk returns a tuple with the Type field value
+// and a boolean to check if the value has been set.
+func (o *Node) GetTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Type, true
+}
+
+// SetType sets field value
+func (o *Node) SetType(v string) {
+	o.Type = v
+}
+
+// GetPosition returns the Position field value if set, zero value otherwise.
+func (o *Node) GetPosition() map[string]interface{} {
+	if o == nil || IsNil(o.Position) {
+		var ret map[string]interface{}
+		return ret
+	}
+	return o.Position
+}
+
+// GetPositionOk returns a tuple with the Position field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Node) GetPositionOk() (map[string]interface{}, bool) {
+	if o == nil || IsNil(o.Position) {
+		return map[string]interface{}{}, false
+	}
+	return o.Position, true
+}
+
+// HasPosition returns a boolean if a field has been set.
+func (o *Node) HasPosition() bool {
+	if o != nil && !IsNil(o.Position) {
+		return true
+	}
+
+	return false
+}
+
+// SetPosition gets a reference to the given map[string]interface{} and assigns it to the Position field.
+func (o *Node) SetPosition(v map[string]interface{}) {
+	o.Position = v
+}
+
+// GetData returns the Data field value if set, zero value otherwise.
+func (o *Node) GetData() map[string]interface{} {
+	if o == nil || IsNil(o.Data) {
+		var ret map[string]interface{}
+		return ret
+	}
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Node) GetDataOk() (map[string]interface{}, bool) {
+	if o == nil || IsNil(o.Data) {
+		return map[string]interface{}{}, false
+	}
+	return o.Data, true
+}
+
+// HasData returns a boolean if a field has been set.
+func (o *Node) HasData() bool {
+	if o != nil && !IsNil(o.Data) {
+		return true
+	}
+
+	return false
+}
+
+// SetData gets a reference to the given map[string]interface{} and assigns it to the Data field.
+func (o *Node) SetData(v map[string]interface{}) {
+	o.Data = v
+}
+
+func (o Node) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o Node) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["id"] = o.Id
+	toSerialize["type"] = o.Type
+	if !IsNil(o.Position) {
+		toSerialize["position"] = o.Position
+	}
+	if !IsNil(o.Data) {
+		toSerialize["data"] = o.Data
+	}
+	return toSerialize, nil
+}
+
+func (o *Node) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"id",
+		"type",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varNode := _Node{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varNode)
+
+	if err != nil {
+		return err
+	}
+
+	*o = Node(varNode)
+
+	return err
+}
+
+type NullableNode struct {
+	value *Node
+	isSet bool
+}
+
+func (v NullableNode) Get() *Node {
+	return v.value
+}
+
+func (v *NullableNode) Set(val *Node) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableNode) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableNode) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableNode(val *Node) *NullableNode {
+	return &NullableNode{value: val, isSet: true}
+}
+
+func (v NullableNode) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableNode) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
