# generated/model_replay_event_200_response.go
@@ -1,0 +1,199 @@
+/*
+Sapliy Fintech API
+
+Official API for the Sapliy Fintech Ecosystem. Build robust financial applications with our type-safe, high-integrity platform.
+
+API version: 1.0.0
+Contact: support@sapliy.io
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package generated
+
+import (
+	"encoding/json"
+)
+
+// checks if the ReplayEvent200Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ReplayEvent200Response{}
+
+// ReplayEvent200Response struct for ReplayEvent200Response
+type ReplayEvent200Response struct {
+	Message *string `json:"message,omitempty"`
+	EventId *string `json:"eventId,omitempty"`
+	OriginalId *string `json:"originalId,omitempty"`
+}
+
+// NewReplayEvent200Response instantiates a new ReplayEvent200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewReplayEvent200Response() *ReplayEvent200Response {
+	this := ReplayEvent200Response{}
+	return &this
+}
+
+// NewReplayEvent200ResponseWithDefaults instantiates a new ReplayEvent200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewReplayEvent200ResponseWithDefaults() *ReplayEvent200Response {
+	this := ReplayEvent200Response{}
+	return &this
+}
+
+// GetMessage returns the Message field value if set, zero value otherwise.
+func (o *ReplayEvent200Response) GetMessage() string {
+	if o == nil || IsNil(o.Message) {
+		var ret string
+		return ret
+	}
+	return *o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ReplayEvent200Response) GetMessageOk() (*string, bool) {
+	if o == nil || IsNil(o.Message) {
+		return nil, false
+	}
+	return o.Message, true
+}
+
+// HasMessage returns a boolean if a field has been set.
+func (o *ReplayEvent200Response) HasMessage() bool {
+	if o != nil && !IsNil(o.Message) {
+		return true
+	}
+
+	return false
+}
+
+// SetMessage gets a reference to the given string and assigns it to the Message field.
+func (o *ReplayEvent200Response) SetMessage(v string) {
+	o.Message = &v
+}
+
+// GetEventId returns the EventId field value if set, zero value otherwise.
+func (o *ReplayEvent200Response) GetEventId() string {
+	if o == nil || IsNil(o.EventId) {
+		var ret string
+		return ret
+	}
+	return *o.EventId
+}
+
+// GetEventIdOk returns a tuple with the EventId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ReplayEvent200Response) GetEventIdOk() (*string, bool) {
+	if o == nil || IsNil(o.EventId) {
+		return nil, false
+	}
+	return o.EventId, true
+}
+
+// HasEventId returns a boolean if a field has been set.
+func (o *ReplayEvent200Response) HasEventId() bool {
+	if o != nil && !IsNil(o.EventId) {
+		return true
+	}
+
+	return false
+}
+
+// SetEventId gets a reference to the given string and assigns it to the EventId field.
+func (o *ReplayEvent200Response) SetEventId(v string) {
+	o.EventId = &v
+}
+
+// GetOriginalId returns the OriginalId field value if set, zero value otherwise.
+func (o *ReplayEvent200Response) GetOriginalId() string {
+	if o == nil || IsNil(o.OriginalId) {
+		var ret string
+		return ret
+	}
+	return *o.OriginalId
+}
+
+// GetOriginalIdOk returns a tuple with the OriginalId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ReplayEvent200Response) GetOriginalIdOk() (*string, bool) {
+	if o == nil || IsNil(o.OriginalId) {
+		return nil, false
+	}
+	return o.OriginalId, true
+}
+
+// HasOriginalId returns a boolean if a field has been set.
+func (o *ReplayEvent200Response) HasOriginalId() bool {
+	if o != nil && !IsNil(o.OriginalId) {
+		return true
+	}
+
+	return false
+}
+
+// SetOriginalId gets a reference to the given string and assigns it to the OriginalId field.
+func (o *ReplayEvent200Response) SetOriginalId(v string) {
+	o.OriginalId = &v
+}
+
+func (o ReplayEvent200Response) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ReplayEvent200Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Message) {
+		toSerialize["message"] = o.Message
+	}
+	if !IsNil(o.EventId) {
+		toSerialize["eventId"] = o.EventId
+	}
+	if !IsNil(o.OriginalId) {
+		toSerialize["originalId"] = o.OriginalId
+	}
+	return toSerialize, nil
+}
+
+type NullableReplayEvent200Response struct {
+	value *ReplayEvent200Response
+	isSet bool
+}
+
+func (v NullableReplayEvent200Response) Get() *ReplayEvent200Response {
+	return v.value
+}
+
+func (v *NullableReplayEvent200Response) Set(val *ReplayEvent200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableReplayEvent200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableReplayEvent200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableReplayEvent200Response(val *ReplayEvent200Response) *NullableReplayEvent200Response {
+	return &NullableReplayEvent200Response{value: val, isSet: true}
+}
+
+func (v NullableReplayEvent200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableReplayEvent200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
